Enhance Jupyter notebook conversion with custom template support and update documentation
- Added support for custom nbconvert templates in the conversion process.
- Updated README.md to reflect new features and options.
- Modified config.yaml to include custom template configuration.
- Implemented tests for default and custom template conversions.
- Introduced a new template for including cell outputs in the converted Python code.

--- a/config.yaml
+++ b/config.yaml
@@ -1,8 +1,11 @@
 github_url: https://github.com/xndrleib/Motor-Fault-Detection/tree/denoising
-exclude:
+exclude: []
 include:
   - src/
   - notebooks/
 include_extensions:
   - ".py"
   - ".ipynb"
+ipynb_conversion:
+  template_file: "templates/python_with_output.tpl"
+  extra_template_basedirs: "templates"
